# ChangeLog for net-im/gossip
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.39 2006/06/15 16:19:29 chainsaw Exp $

*gossip-0.11.2 (15 Jun 2006)

  15 Jun 2006; Tony Vroon <chainsaw@gentoo.org> metadata.xml,
  +gossip-0.11.2.ebuild:
  net-im enters a joint maintainership of this package with the gnome herd,
  authorized by: allanonjl, dang, leonardop. Version bump to 0.11.2; closes
  bugs #128916 and #134911. Ebuild changes thanks to Mikel Olasagasti
  <hey_neken@euskal.org> and Hans de Graaff <hans@degraaff.org>. ~ppc64 and
  ~sparc lost their keywords due to the new dependencies, filed bug #136906.

  03 Jun 2006; Mark Loeser <halcy0n@gentoo.org> gossip-0.8.ebuild:
  Push back to ~x86

  17 Apr 2006; Markus Rothe <corsair@gentoo.org> gossip-0.9.ebuild,
  gossip-0.10.1.ebuild, gossip-0.10.2.ebuild:
  Added ~ppc64; bug #124659

  13 Apr 2006; Jason Wever <weeve@gentoo.org> gossip-0.9.ebuild:
  Stable on SPARC wrt bug #124659.

  09 Apr 2006; <nixnut@gentoo.org> gossip-0.9.ebuild:
  Stable on ppc. Bug #124659

  09 Apr 2006; Olivier Crête <tester@gentoo.org> gossip-0.9.ebuild:
  Stable on amd64 per bug #124659

*gossip-0.10.2 (20 Mar 2006)

  20 Mar 2006; Marinus Schraal <foser@gentoo.org> gossip-0.10.2.ebuild :
  New release

*gossip-0.10.1 (02 Mar 2006)

  02 Mar 2006; Marinus Schraal <foser@gentoo.org> gossip-0.{9,10.1}.ebuild :
  New bugfix release, add X11 modular deps

  28 Feb 2006; Saleem Abdulrasool <compnerd@gentoo.org> gossip-0.8.ebuild,
  gossip-0.9.ebuild, gossip-0.10.ebuild:
  Fixing homepage for gossip (bug #123846)

  24 Feb 2006; John N. Laliberte <allanonjl@gentoo.org> gossip-0.10.ebuild:
  fix scrollkeeper violations, #123835

*gossip-0.10 (23 Feb 2005)

  23 Feb 2005; Marinus Schraal <foser@gentoo.org> gossip-0.10.ebuild :
  new release, add spell & dbus USE flags

*gossip-0.9 (16 Aug 2005)
