@@ -1,0 +1,3 @@
+MD5 f67bbeac01b48b1f140c93ea64045e65 gossip-0.11.2.tar.bz2 1074436
+RMD160 68f15bf818da9ce4de9c424f5b157459970a29cb gossip-0.11.2.tar.bz2 1074436
+SHA256 6129002a63519e030737279e0da64e1b3805b1540dee677e25972f5f273a4a90 gossip-0.11.2.tar.bz2 1074436
