@@ -1,6 +1,14 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.39 2006/06/15 16:19:29 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/Attic/ChangeLog,v 1.40 2006/06/16 11:54:45 chainsaw Exp $
+
+*gossip-0.11.2-r1 (16 Jun 2006)
+
+  16 Jun 2006; Tony Vroon <chainsaw@gentoo.org> -gossip-0.11.2.ebuild,
+  +gossip-0.11.2-r1.ebuild:
+  Sync DEPEND & RDEPEND with configure.ac; remove galago USE-flag as the
+  galago daemon fails to start at all on my system. Add ~sparc back, this was
+  lost over galago only.
 
 *gossip-0.11.2 (15 Jun 2006)
 
